# minecraftAIbot

./: .env  .env.example  Cargo.toml  frankfurt_sentinel.service  run.sh  start.sh
src/: bot.rs  config.rs  main.rs
src/cognitive/: dreamer.rs  goal_planner.rs  memory.rs  mod.rs  personality.rs
src/plugins/: anti_afk.rs  auto_eat.rs  brain.rs  inventory.rs  mining.rs  mod.rs  pathfinding.rs  ping.rs  self_defense.rs
src/systems/: builder.rs  combat.rs  economy.rs  farmer.rs  inventory_manager.rs  judge.rs  mod.rs  motor.rs  natural_look.rs  reaction_delay.rs  smart_mining.rs  social.rs  spider_sense.rs  typos.rs  visual_cortex.rs  world_scanner.rs
