[package]
name = "frankfurt_sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
azalea = "0.15.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
